<resources>
    <string name="app_name">VideosLibrary</string>
    <string name="this_is_title_video">This is title video</string>
    <string name="youtube">Youtube</string>
    <string name="views">views</string>
    <string name="_5_days_ago">5 days ago</string>
    <string name="khang_do">Khang Do</string>
    <string name="view_full_playlist">View Full Playlist</string>
    <string name="_100">100</string>
    <string name="videos_library">Videos Library</string>
    <string name="live_with_your_music_world">Live with your music world !!!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="kai_do">Kai Do</string>
    <string name="hello">Hello,</string>
    <string name="my_playlist">My Playlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>