<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="100dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/videos_library"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/live_with_your_music_world"
            android:textColor="@color/colorNote3"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSignInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_signin_google"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <ImageView
            android:id="@+id/imageGoogle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/google"
            android:tint="@color/colorNote3" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>