<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/hello"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        app:layout_constraintBottom_toBottomOf="@id/textUsername"
        app:layout_constraintEnd_toStartOf="@id/textUsername" />


    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/kai_do"
        android:textAllCaps="true"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogout"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogout"
        app:layout_constraintEnd_toStartOf="@id/buttonLogout" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabLayout"
        android:paddingTop="15dp"
        android:paddingBottom="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogout"
        app:tabIndicatorHeight="3dp"
        app:tabMode="fixed"/>
    
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/viewPaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>