<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorDefaultNote">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutPlaylist"
            android:background="@drawable/background_video_item">
            
            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="fitXY"
                android:layout_marginBottom="8dp"
                android:id="@+id/imagePlaylist"/>
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textTitlePlaylist"
                android:text="@string/this_is_title_video"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagePlaylist"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textDateTimePlaylist"
                android:text="@string/_5_days_ago"
                android:textSize="13sp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/textTitlePlaylist"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFull"
                android:text="@string/view_full_playlist"
                android:textColor="@color/colorWhite"
                android:textSize="13sp"
                android:fontFamily="@font/ubuntu_medium"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDateTimePlaylist"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:includeFontPadding="false"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>